# uvicorn-gunicorn-docker

./: LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docker-images/: prestart.sh  python3.10-alpine3.13.dockerfile  python3.10-slim.dockerfile  python3.10.dockerfile  python3.6-alpine3.8.dockerfile  python3.6.dockerfile  python3.7-alpine3.8.dockerfile  python3.7.dockerfile  python3.8-alpine3.10.dockerfile  python3.8.dockerfile  python3.9-alpine3.13.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile  start-reload.sh  start.sh
docker-images/app/: main.py
scripts/: build-push.sh  build.sh  deploy.sh  process_all.py  test.sh
tests/: utils.py
tests/test_01_main/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py  test_env_vars_3.py  test_env_vars_4.py
tests/test_02_app/: test_custom_app.py  test_package_app.py  test_package_app_config.py  test_package_app_custom_config.py  test_package_app_sub_config.py  test_simple_app.py
tests/test_03_reload/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py  test_env_vars_3.py
tests/test_04_app_reload/: test_custom_app.py  test_package_app.py  test_simple_app.py
tests/test_04_app_reload/custom_app/app/custom_app/: custom_main.py
tests/test_04_app_reload/package_app/app/app/: main.py
