[tool.poetry]
name = "uvicorn-gunicorn-docker"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for high-performance web applications in Python 3 with performance auto-tuning. Optionally with Alpine Linux."
authors = ["Sebastián Ramírez <tiangolo@gmail.com>", "Rushil Srivastava <rushu0922@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
docker = "^5.0.0"
pytest = "^6.2.4"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"
autoflake = "^1.3.1"
mypy = "^0.910"
types-requests = "^2.25.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
